kanc_pamoi/src/tests/sample_code/should_fail/single_file/parse/transparency/super1.k
let(super1) x = Type;
